option java_package = "fr.kissy.hellion.proto.common";
option java_outer_classname = "PropertyDto";
option java_generic_services = false;

message PropertyProto {
    required string name = 1;
    repeated bytes value = 2;
}
